# tinyos

./: CMakeLists.txt  README.md
cmake/: riscv64-toolchain.cmake
include/: csr.h  elf.h  fs.h  kprintf.h  mem.h  mm.h  proc.h  syscall.h  trap.h  types.h  uart.h  util.h  virtio_blk.h  vm.h
kernel/: elf.c  entry.S  fs.c  kernel.ld  kprintf.c  main.c  mem.c  mm.c  proc.c  switch.S  syscall.c  trap.S  trap.c  uart.c  user.S  util.c  virtio_blk.c  vm.c
tools/: mkfs.py
user/: crt0.S  hello.c  lib.h  user.ld
